package com.example.demo.ui;

public interface ITextEditorUi {
    ITextField getTextField();
}
