package com.example.demo.ui;

public interface ITextField{
    void addCharacter(Character character);
    void removeCharacter();
}
